# unimock

./: Cargo.toml
ext/database/: Unimock.db
ext/static/: index.html
src/: main.rs
src/config/: database.rs  logger.rs  mod.rs
src/templates/: controller.rs  mod.rs
src/triggers/: controller.rs  mod.rs
