[package]
name = "unimock"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
log = "0.4"
log4rs = { version = "1.0", features = ["console_appender", "rolling_file_appender", "size_trigger", "compound_policy"] }
structopt = "0.3"
actix-files = "0.5"
serde = "1"
serde_json = "1.0"
jsonpath = "0.1.1"
rusqlite = { version = "0.26", features = ["bundled"] }
futures = "0.3"